tests/snapshots/report_snapshots__batch_text_with_failures.snap
---
source: tests/report_snapshots.rs
expression: render_batch_text(&view)
---
========================================
    SOROBAN BATCH SAFETY REPORT
========================================
Overall Status: ❌ FAILED (Some contracts have breaking changes)

Summary of Contracts:
  - breaking_contract: ❌ FAILED (2 critical, 0 warnings, 1 info, 1 suppressed)
  - broken_pair: ⛔ ERROR (resource limit) — resource limit exceeded: max_xdr_depth (64)

========================================

=== Contract: breaking_contract ===

========================================
    SOROBAN UPGRADE SAFETY REPORT
========================================
Status: ❌ FAILED (Critical breaking changes detected)
Critical: 2
Warnings: 0
Info:     1
Suppressed: 1
Recommended Bump: major
----------------------------------------

--- [ENVIRONMENT] ---
🔵 Protocol version changed from 20 to 21

--- [FUNCTION SIGNATURE CHANGED] ---
🔕 [SUPPRESSED] Function 'initialize' signature changed
    ↳ reason: Planned re-init for the v2 migration.

--- [STRUCT FIELD REMOVED] ---
🔴 Field 'threshold' removed from struct 'ConfigData'

⚠️  ACTION REQUIRED: The new contract version modifies existing storage layouts or function interfaces.
Deploying this upgrade will result in orphaned data, serialization panics, or broken integrations.

========================================
