tests/snapshots/report_snapshots__single_json_provenance.snap
---
source: tests/report_snapshots.rs
expression: json
---
{
  "is_safe": true,
  "strict": false,
  "counts": {
    "critical": 0,
    "warning": 0,
    "info": 0
  },
  "suppressed_count": 0,
  "total_findings": 0,
  "recommended_bump": "patch",
  "baseline_source": "RPC",
  "verified_code_hash": "deadbeefcafef00d1122334455667788990011223344556677889900aabbccddee",
  "findings_by_category": {}
}
